--- a/notebook/supervisor learning/final_model.ipynb
+++ b/notebook/supervisor learning/final_model.ipynb
@@ -19,12 +19,76 @@
    "cell_type": "markdown",
    "id": "ad64e98c",
    "metadata": {},
+   "source": [
+    "# Import the packege"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cff244b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap\n",
+    "import time\n",
+    "import logging\n",
+    "import warnings\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split, cross_validate, RepeatedKFold, GridSearchCV, KFold\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, OneHotEncoder\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
+    "from sklearn.ensemble import RandomForestRegressor, ExtraTreesRegressor, GradientBoostingRegressor, StackingRegressor\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, median_absolute_error\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression, mutual_info_regression, RFECV, SelectFromModel\n",
+    "from sklearn.decomposition import PCA\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin, clone\n",
+    "from sklearn.multioutput import MultiOutputRegressor\n",
+    "from scipy.stats import wilcoxon, bootstrap\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from scipy.stats import wilcoxon, bootstrap, uniform, randint\n",
+    "import joblib\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3957330",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "backend-_rtLvpYT-py3.12",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
