--- a/notebook/supervisor learning/final_model.ipynb
+++ b/notebook/supervisor learning/final_model.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "cff244b3",
    "metadata": {},
    "outputs": [],
@@ -60,13 +60,224 @@
     "from sklearn.impute import KNNImputer\n",
     "from scipy.stats import wilcoxon, bootstrap, uniform, randint\n",
     "import joblib\n",
-    "import os\n"
+    "import os\n",
+    "import tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d3957330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings('ignore')\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "logger = logging.getLogger(__name__)\n",
+    "SEED = 42\n",
+    "np.random.seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6ddd07f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../../data/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "147cbb94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('id', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "61be52de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temparature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Moisture</th>\n",
+       "      <th>Soil Type</th>\n",
+       "      <th>Crop Type</th>\n",
+       "      <th>Nitrogen</th>\n",
+       "      <th>Potassium</th>\n",
+       "      <th>Phosphorous</th>\n",
+       "      <th>Fertilizer Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37</td>\n",
+       "      <td>70</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Clayey</td>\n",
+       "      <td>Sugarcane</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>28-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27</td>\n",
+       "      <td>69</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>Millets</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>28-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>63</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>Millets</td>\n",
+       "      <td>24</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17-17-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>62</td>\n",
+       "      <td>54</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>Barley</td>\n",
+       "      <td>39</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10-26-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35</td>\n",
+       "      <td>58</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Paddy</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>DAP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Temparature  Humidity  Moisture Soil Type  Crop Type  Nitrogen  Potassium  \\\n",
+       "0           37        70        36    Clayey  Sugarcane        36          4   \n",
+       "1           27        69        65     Sandy    Millets        30          6   \n",
+       "2           29        63        32     Sandy    Millets        24         12   \n",
+       "3           35        62        54     Sandy     Barley        39         12   \n",
+       "4           35        58        43       Red      Paddy        37          2   \n",
+       "\n",
+       "   Phosphorous Fertilizer Name  \n",
+       "0            5           28-28  \n",
+       "1           18           28-28  \n",
+       "2           16        17-17-17  \n",
+       "3            4        10-26-26  \n",
+       "4           16             DAP  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "30075844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 750000 entries, 0 to 749999\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column           Non-Null Count   Dtype \n",
+      "---  ------           --------------   ----- \n",
+      " 0   Temparature      750000 non-null  int64 \n",
+      " 1   Humidity         750000 non-null  int64 \n",
+      " 2   Moisture         750000 non-null  int64 \n",
+      " 3   Soil Type        750000 non-null  object\n",
+      " 4   Crop Type        750000 non-null  object\n",
+      " 5   Nitrogen         750000 non-null  int64 \n",
+      " 6   Potassium        750000 non-null  int64 \n",
+      " 7   Phosphorous      750000 non-null  int64 \n",
+      " 8   Fertilizer Name  750000 non-null  object\n",
+      "dtypes: int64(6), object(3)\n",
+      "memory usage: 51.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9477061e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "encoded_cols = encoder.fit_transform(df[['Soil Type', 'Crop Type']])\n",
+    "\n",
+    "encoded_df = pd.DataFrame(encoded_cols, columns=encoder.get_feature_names_out(['Soil Type', 'Crop Type']))\n",
+    "\n",
+    "df = pd.concat([df.drop(['Soil Type', 'Crop Type'], axis=1), encoded_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3957330",
+   "id": "25a948b8",
    "metadata": {},
    "outputs": [],
    "source": []
