feat:🍏 Updata the Model

--- a/notebook/supervisor learning/final_model.ipynb
+++ b/notebook/supervisor learning/final_model.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "cff244b3",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split, cross_validate, RepeatedKFold, GridSearchCV, KFold\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, OneHotEncoder , LabelEncoder\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
@@ -59,6 +59,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import KNNImputer\n",
     "from scipy.stats import wilcoxon, bootstrap, uniform, randint\n",
+    "\n",
     "import joblib\n",
     "import os\n",
     "import tensorflow"
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "d3957330",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "6ddd07f3",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "147cbb94",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "61be52de",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
        "4           16             DAP  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "30075844",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "9477061e",
    "metadata": {},
    "outputs": [],
@@ -276,8 +277,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "25a948b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "df['Fertilizer Name'] = label_encoder.fit_transform(df['Fertilizer Name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "195785ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         4\n",
+       "1         4\n",
+       "2         2\n",
+       "3         0\n",
+       "4         5\n",
+       "         ..\n",
+       "749995    4\n",
+       "749996    2\n",
+       "749997    0\n",
+       "749998    3\n",
+       "749999    6\n",
+       "Name: Fertilizer Name, Length: 750000, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Fertilizer Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6161d512",
    "metadata": {},
    "outputs": [],
    "source": []
