feat:🍏 Updata the Model

--- a/notebook/supervisor learning/final_model.ipynb
+++ b/notebook/supervisor learning/final_model.ipynb
@@ -259,6 +259,63 @@
    "source": [
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49b7dec4",
+   "metadata": {},
+   "source": [
+    "# ETL Pipeline for Agricultural Fertilizer Prediction Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e141c468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FertilizerETL:\n",
+    "    def __init__(self, df):\n",
+    "        self.df = df.copy()\n",
+    "        self.scaler = StandardScaler()\n",
+    "        self.label_encoders = {}\n",
+    "        self.target_encoder = LabelEncoder()\n",
+    "        \n",
+    "    def extract_and_explore(self):\n",
+    "        print('=== DATASET OVERVIEW ===')\n",
+    "        print(f'Dataset shape: {self.df.shape}')\n",
+    "        print(f'Memory Usage: {self.df.memory_usage(deep=True).sum()/1024*2:.2f} MB')\n",
+    "        print('\\n=== DATA TYPES ===')\n",
+    "        print(self.df.dtype)\n",
+    "        \n",
+    "        \n",
+    "        print('\\n=== MISSING VALUES ===')\n",
+    "        print(self.df.isnull().sum())\n",
+    "        \n",
+    "        \n",
+    "        print('\\n===BASIC STATISTICS ===')\n",
+    "        print(self.df.describe())\n",
+    "        \n",
+    "        \n",
+    "        print(\"\\n=== CATEGORICAL VARIABLES ANALYSIS ===\")\n",
+    "        categorical_cols = ['Soil Type', 'Crop Type', 'Fertilizer Name']\n",
+    "        for col in categorical_cols:\n",
+    "            print(f\"\\n{col} - Unique values: {self.df[col].nunique()}\")\n",
+    "            print(self.df[col].value_counts().head(10))\n",
+    "            \n",
+    "        return self.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfeb0998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
