feat:🍏 make some problems

--- a/notebook/supervisor learning/final_model.ipynb
+++ b/notebook/supervisor learning/final_model.ipynb
@@ -804,19 +804,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
+   "id": "4461040b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "9a95e70d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y_cat, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "id": "95efc837",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0000 00:00:1750750377.692347   11284 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Sequential([\n",
     "\tDense(128, input_shape=(X.shape[1],)),\n",
