feat:🔥 update model EEG

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,8 @@
     "import threading\n",
     "import warnings\n",
     "import sweetviz as sv\n",
-    "import logging"
+    "import logging\n",
+    "import mne"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 13:53:25,727 - INFO - find the GPU and version tf\n",
+      "W0000 00:00:1750856005.726354   10905 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -78,20 +88,13 @@
       "False\n",
       "[]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0000 00:00:1750855465.779383   10905 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
     }
    ],
    "source": [
     "print(tf.__version__)\n",
     "print(tf.test.is_gpu_available())\n",
-    "print(tf.config.list_physical_devices('GPU'))"
+    "print(tf.config.list_physical_devices('GPU'))\n",
+    "logger.info(\"find the GPU and version tf\")"
    ]
   },
   {
@@ -103,406 +106,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 13:54:56,287 - INFO - read data set EEG successfully \n"
+     ]
+    }
+   ],
    "source": [
     "data_list = []\n",
     "for i in range(30):\n",
     "    df = pd.read_csv(f'../../data/data_EEG/s{i:02d}.csv', header=None)\n",
-    "    data_list.append(df.transpose().to_numpy())"
+    "    data_list.append(df.transpose().to_numpy())\n",
+    "    \n",
+    "logger.info(\"read data set EEG successfully \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_view = pd.read_csv(f'../../data/data_EEG/s{i:02d}.csv', header=None)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.891400</td>\n",
-       "      <td>10.145000</td>\n",
-       "      <td>6.202000</td>\n",
-       "      <td>6.598600</td>\n",
-       "      <td>3.888400</td>\n",
-       "      <td>8.634200</td>\n",
-       "      <td>-2.845800</td>\n",
-       "      <td>4.390900</td>\n",
-       "      <td>0.271170</td>\n",
-       "      <td>5.505600</td>\n",
-       "      <td>-3.340900</td>\n",
-       "      <td>4.68650</td>\n",
-       "      <td>-0.840570</td>\n",
-       "      <td>0.990550</td>\n",
-       "      <td>-5.770500</td>\n",
-       "      <td>4.099100</td>\n",
-       "      <td>6.593500</td>\n",
-       "      <td>1.990200</td>\n",
-       "      <td>2.55470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.708100</td>\n",
-       "      <td>9.836600</td>\n",
-       "      <td>6.379900</td>\n",
-       "      <td>6.819400</td>\n",
-       "      <td>3.122600</td>\n",
-       "      <td>10.591000</td>\n",
-       "      <td>-3.103300</td>\n",
-       "      <td>3.943500</td>\n",
-       "      <td>0.713470</td>\n",
-       "      <td>5.543400</td>\n",
-       "      <td>-3.223100</td>\n",
-       "      <td>3.43950</td>\n",
-       "      <td>-0.954640</td>\n",
-       "      <td>0.192880</td>\n",
-       "      <td>-6.142000</td>\n",
-       "      <td>2.980500</td>\n",
-       "      <td>7.797800</td>\n",
-       "      <td>2.454400</td>\n",
-       "      <td>2.06070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.545400</td>\n",
-       "      <td>9.129800</td>\n",
-       "      <td>6.417100</td>\n",
-       "      <td>6.821800</td>\n",
-       "      <td>2.326300</td>\n",
-       "      <td>11.944000</td>\n",
-       "      <td>-3.264900</td>\n",
-       "      <td>3.243400</td>\n",
-       "      <td>1.143900</td>\n",
-       "      <td>5.464800</td>\n",
-       "      <td>-3.026700</td>\n",
-       "      <td>2.03800</td>\n",
-       "      <td>-0.823240</td>\n",
-       "      <td>-0.770730</td>\n",
-       "      <td>-6.195100</td>\n",
-       "      <td>1.518900</td>\n",
-       "      <td>8.720100</td>\n",
-       "      <td>2.770800</td>\n",
-       "      <td>1.54080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.299100</td>\n",
-       "      <td>8.049500</td>\n",
-       "      <td>6.251100</td>\n",
-       "      <td>6.517900</td>\n",
-       "      <td>1.650900</td>\n",
-       "      <td>12.149000</td>\n",
-       "      <td>-3.154700</td>\n",
-       "      <td>2.335000</td>\n",
-       "      <td>1.500400</td>\n",
-       "      <td>5.243000</td>\n",
-       "      <td>-2.739800</td>\n",
-       "      <td>0.69305</td>\n",
-       "      <td>-0.364070</td>\n",
-       "      <td>-1.762300</td>\n",
-       "      <td>-5.763200</td>\n",
-       "      <td>-0.138650</td>\n",
-       "      <td>9.027100</td>\n",
-       "      <td>2.817400</td>\n",
-       "      <td>1.12310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.849800</td>\n",
-       "      <td>6.747400</td>\n",
-       "      <td>5.838300</td>\n",
-       "      <td>5.887800</td>\n",
-       "      <td>1.131700</td>\n",
-       "      <td>10.928000</td>\n",
-       "      <td>-2.626700</td>\n",
-       "      <td>1.308200</td>\n",
-       "      <td>1.754900</td>\n",
-       "      <td>4.898700</td>\n",
-       "      <td>-2.336000</td>\n",
-       "      <td>-0.38428</td>\n",
-       "      <td>0.453200</td>\n",
-       "      <td>-2.612000</td>\n",
-       "      <td>-4.765800</td>\n",
-       "      <td>-1.774900</td>\n",
-       "      <td>8.521700</td>\n",
-       "      <td>2.554000</td>\n",
-       "      <td>0.94627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30995</th>\n",
-       "      <td>-0.000832</td>\n",
-       "      <td>-0.000063</td>\n",
-       "      <td>-0.000388</td>\n",
-       "      <td>-0.000738</td>\n",
-       "      <td>-0.000007</td>\n",
-       "      <td>0.000735</td>\n",
-       "      <td>-0.001014</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>0.000466</td>\n",
-       "      <td>-0.001172</td>\n",
-       "      <td>0.000815</td>\n",
-       "      <td>0.00058</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>0.000955</td>\n",
-       "      <td>0.001659</td>\n",
-       "      <td>0.001965</td>\n",
-       "      <td>-0.000974</td>\n",
-       "      <td>-0.001453</td>\n",
-       "      <td>0.00168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30996</th>\n",
-       "      <td>-0.000832</td>\n",
-       "      <td>-0.000063</td>\n",
-       "      <td>-0.000388</td>\n",
-       "      <td>-0.000738</td>\n",
-       "      <td>-0.000007</td>\n",
-       "      <td>0.000735</td>\n",
-       "      <td>-0.001014</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>0.000466</td>\n",
-       "      <td>-0.001172</td>\n",
-       "      <td>0.000815</td>\n",
-       "      <td>0.00058</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>0.000955</td>\n",
-       "      <td>0.001659</td>\n",
-       "      <td>0.001965</td>\n",
-       "      <td>-0.000974</td>\n",
-       "      <td>-0.001453</td>\n",
-       "      <td>0.00168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30997</th>\n",
-       "      <td>-0.000832</td>\n",
-       "      <td>-0.000063</td>\n",
-       "      <td>-0.000388</td>\n",
-       "      <td>-0.000738</td>\n",
-       "      <td>-0.000007</td>\n",
-       "      <td>0.000735</td>\n",
-       "      <td>-0.001014</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>0.000466</td>\n",
-       "      <td>-0.001172</td>\n",
-       "      <td>0.000815</td>\n",
-       "      <td>0.00058</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>0.000955</td>\n",
-       "      <td>0.001659</td>\n",
-       "      <td>0.001965</td>\n",
-       "      <td>-0.000974</td>\n",
-       "      <td>-0.001453</td>\n",
-       "      <td>0.00168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30998</th>\n",
-       "      <td>-0.000832</td>\n",
-       "      <td>-0.000063</td>\n",
-       "      <td>-0.000388</td>\n",
-       "      <td>-0.000738</td>\n",
-       "      <td>-0.000007</td>\n",
-       "      <td>0.000735</td>\n",
-       "      <td>-0.001014</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>0.000466</td>\n",
-       "      <td>-0.001172</td>\n",
-       "      <td>0.000815</td>\n",
-       "      <td>0.00058</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>0.000955</td>\n",
-       "      <td>0.001659</td>\n",
-       "      <td>0.001965</td>\n",
-       "      <td>-0.000974</td>\n",
-       "      <td>-0.001453</td>\n",
-       "      <td>0.00168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30999</th>\n",
-       "      <td>-0.000832</td>\n",
-       "      <td>-0.000063</td>\n",
-       "      <td>-0.000388</td>\n",
-       "      <td>-0.000738</td>\n",
-       "      <td>-0.000007</td>\n",
-       "      <td>0.000735</td>\n",
-       "      <td>-0.001014</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>0.000466</td>\n",
-       "      <td>-0.001172</td>\n",
-       "      <td>0.000815</td>\n",
-       "      <td>0.00058</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>0.000955</td>\n",
-       "      <td>0.001659</td>\n",
-       "      <td>0.001965</td>\n",
-       "      <td>-0.000974</td>\n",
-       "      <td>-0.001453</td>\n",
-       "      <td>0.00168</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>31000 rows × 19 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             0          1         2         3         4          5         6   \\\n",
-       "0      2.891400  10.145000  6.202000  6.598600  3.888400   8.634200 -2.845800   \n",
-       "1      3.708100   9.836600  6.379900  6.819400  3.122600  10.591000 -3.103300   \n",
-       "2      4.545400   9.129800  6.417100  6.821800  2.326300  11.944000 -3.264900   \n",
-       "3      5.299100   8.049500  6.251100  6.517900  1.650900  12.149000 -3.154700   \n",
-       "4      5.849800   6.747400  5.838300  5.887800  1.131700  10.928000 -2.626700   \n",
-       "...         ...        ...       ...       ...       ...        ...       ...   \n",
-       "30995 -0.000832  -0.000063 -0.000388 -0.000738 -0.000007   0.000735 -0.001014   \n",
-       "30996 -0.000832  -0.000063 -0.000388 -0.000738 -0.000007   0.000735 -0.001014   \n",
-       "30997 -0.000832  -0.000063 -0.000388 -0.000738 -0.000007   0.000735 -0.001014   \n",
-       "30998 -0.000832  -0.000063 -0.000388 -0.000738 -0.000007   0.000735 -0.001014   \n",
-       "30999 -0.000832  -0.000063 -0.000388 -0.000738 -0.000007   0.000735 -0.001014   \n",
-       "\n",
-       "             7         8         9         10       11        12        13  \\\n",
-       "0      4.390900  0.271170  5.505600 -3.340900  4.68650 -0.840570  0.990550   \n",
-       "1      3.943500  0.713470  5.543400 -3.223100  3.43950 -0.954640  0.192880   \n",
-       "2      3.243400  1.143900  5.464800 -3.026700  2.03800 -0.823240 -0.770730   \n",
-       "3      2.335000  1.500400  5.243000 -2.739800  0.69305 -0.364070 -1.762300   \n",
-       "4      1.308200  1.754900  4.898700 -2.336000 -0.38428  0.453200 -2.612000   \n",
-       "...         ...       ...       ...       ...      ...       ...       ...   \n",
-       "30995  0.000179  0.000466 -0.001172  0.000815  0.00058  0.001246  0.000955   \n",
-       "30996  0.000179  0.000466 -0.001172  0.000815  0.00058  0.001246  0.000955   \n",
-       "30997  0.000179  0.000466 -0.001172  0.000815  0.00058  0.001246  0.000955   \n",
-       "30998  0.000179  0.000466 -0.001172  0.000815  0.00058  0.001246  0.000955   \n",
-       "30999  0.000179  0.000466 -0.001172  0.000815  0.00058  0.001246  0.000955   \n",
-       "\n",
-       "             14        15        16        17       18  \n",
-       "0     -5.770500  4.099100  6.593500  1.990200  2.55470  \n",
-       "1     -6.142000  2.980500  7.797800  2.454400  2.06070  \n",
-       "2     -6.195100  1.518900  8.720100  2.770800  1.54080  \n",
-       "3     -5.763200 -0.138650  9.027100  2.817400  1.12310  \n",
-       "4     -4.765800 -1.774900  8.521700  2.554000  0.94627  \n",
-       "...         ...       ...       ...       ...      ...  \n",
-       "30995  0.001659  0.001965 -0.000974 -0.001453  0.00168  \n",
-       "30996  0.001659  0.001965 -0.000974 -0.001453  0.00168  \n",
-       "30997  0.001659  0.001965 -0.000974 -0.001453  0.00168  \n",
-       "30998  0.001659  0.001965 -0.000974 -0.001453  0.00168  \n",
-       "30999  0.001659  0.001965 -0.000974 -0.001453  0.00168  \n",
-       "\n",
-       "[31000 rows x 19 columns]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_view = pd.read_csv(f'../../data/data_EEG/s{i:02d}.csv', header=None)\n",
-    "df_view"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 13:56:20,503 - INFO - see the Missing value about the data\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "0     0\n",
-       "1     0\n",
-       "2     0\n",
-       "3     0\n",
-       "4     0\n",
-       "5     0\n",
-       "6     0\n",
-       "7     0\n",
-       "8     0\n",
-       "9     0\n",
-       "10    0\n",
-       "11    0\n",
-       "12    0\n",
-       "13    0\n",
-       "14    0\n",
-       "15    0\n",
-       "16    0\n",
-       "17    0\n",
-       "18    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Value:\n",
+      " 0     0\n",
+      "1     0\n",
+      "2     0\n",
+      "3     0\n",
+      "4     0\n",
+      "5     0\n",
+      "6     0\n",
+      "7     0\n",
+      "8     0\n",
+      "9     0\n",
+      "10    0\n",
+      "11    0\n",
+      "12    0\n",
+      "13    0\n",
+      "14    0\n",
+      "15    0\n",
+      "16    0\n",
+      "17    0\n",
+      "18    0\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "df_view.isna().sum()"
+    "print(\"Missing Value:\\n\", df_view.isna().sum())\n",
+    "logger.info('see the Missing value about the data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -770,13 +457,31 @@
        "max       73.909000     38.701000     52.101000     61.631000  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_view.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing with MNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessing_eeg(data, sfreq=256):\n",
+    "    ch_names = [f'ch{i}' for i in range(data.shape[2])]\n",
+    "    info = mne"
    ]
   },
   {
