--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "from matplotlib import pyplot as plt\n",
     "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import threading\n",
     "import warnings\n",
     "import sweetviz as sv\n",
@@ -290,12 +291,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normalize data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_X = dataset_X.reshape(30, 760, 775, 1).astype('float32')"
+    "scaler = StandardScaler()\n",
+    "dataset_X = scaler.fit_transform(dataset_X.reshape(-1, dataset_X.shape[-1])).reshape(dataset_X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 31000, 19)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_X.shape"
    ]
   },
   {
@@ -315,24 +344,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(30, 1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 14:32:38,767 - INFO - Downsampled Dataset \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downsampled Dataset Shape: (30, 3, 19)\n"
+     ]
     }
    ],
    "source": [
-    "y = np.array([0,1,1,1,0,1,0,1,1,0,0,1,1,1,0,1,1,1,1,0,1,0,0,1,1,1,1,1,1,1])\n",
-    "y = y.reshape(-1, 1)\n",
-    "y.shape"
+    "factor = 20\n",
+    "def downsample_eeg(data, factor=20):\n",
+    "    n_subjects, n_times, n_channels = data.shape\n",
+    "    new_times = n_times // factor\n",
+    "    data = data[:, :new_times * factor, :]  # Trim excess\n",
+    "    data = data.reshape(n_subjects, new_times, factor, n_channels).mean(axis=2)\n",
+    "    return data\n",
+    "\n",
+    "dataset_X = downsample_eeg(dataset_X, factor)\n",
+    "print(\"Downsampled Dataset Shape:\", dataset_X.shape)  # Should be (30, 1550, 19)\n",
+    "logger.info('Downsampled Dataset ')"
    ]
   },
   {
