feat:🌍 fix model

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +374,65 @@
     "dataset_X = downsample_eeg(dataset_X, factor)\n",
     "print(\"Downsampled Dataset Shape:\", dataset_X.shape)  # Should be (30, 1550, 19)\n",
     "logger.info('Downsampled Dataset ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reshape for CNN input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 14:40:57,606 - INFO - fit the CNN Input model\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN Input Shape: (30, 3, 19, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_X = dataset_X.reshape(dataset_X.shape[0], dataset_X.shape[1], dataset_X.shape[2], 1).astype('float32')\n",
+    "print(\"CNN Input Shape:\", dataset_X.shape)  # Should be (30, 1550, 19, 1)\n",
+    "logger.info(\"fit the CNN Input model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labels (0: No Alcohol, 1: With Alcohol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label Distribution: [ 9 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.array([0,1,1,1,0,1,0,1,1,0,0,1,1,1,0,1,1,1,1,0,1,0,0,1,1,1,1,1,1,1])\n",
+    "y = y.reshape(-1, 1)\n",
+    "print(\"Label Distribution:\", np.bincount(y.flatten()))"
    ]
   },
   {
