feat:🌍 Update the model

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -418,9 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 14:42:27,065 - INFO - Make Label\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -432,7 +439,8 @@
    "source": [
     "y = np.array([0,1,1,1,0,1,0,1,1,0,0,1,1,1,0,1,1,1,1,0,1,0,0,1,1,1,1,1,1,1])\n",
     "y = y.reshape(-1, 1)\n",
-    "print(\"Label Distribution:\", np.bincount(y.flatten()))"
+    "print(\"Label Distribution:\", np.bincount(y.flatten()))\n",
+    "logger.info('Make Label')"
    ]
   },
   {
