--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -725,11 +725,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a input shape(1550, 19, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"This is a input shape{dataset_X.shape[1:]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)"
+    "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Conv2D(filters=32, kernel_size=3, strides=(2,2), activation='relu',\n",
+    "                           input_shape=dataset_X.shape[1:], padding='same'),\n",
+    "    tf.keras.layers.MaxPool2D(2, 2),\n",
+    "    tf.keras.layers.BatchNormalization(),\n",
+    "    tf.keras.layers.Dropout(0.3),\n",
+    "    tf.keras.layers.Reshape((387, 5 * 32)),  # Correct shape: 387 timesteps, 5 * 32 features\n",
+    "    tf.keras.layers.LSTM(128, return_sequences=True),\n",
+    "    tf.keras.layers.LSTM(64),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])"
    ]
   },
   {
